Practice Project/src/objects/LinkedInTest__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LinkedInTest</relationshipLabel>
        <relationshipName>LinkedInTest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsUnsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUnsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>LinkedInTest</relationshipLabel>
        <relationshipName>LinkedInTest</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LinkedInTest</label>
    <nameField>
        <label>LinkedInTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LinkedInTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>